Fix for z-index

--- a/src/main/webapp/js/components/dev/form/Form.css
+++ b/src/main/webapp/js/components/dev/form/Form.css
@@ -33,7 +33,6 @@
 .geppettoForm label  {
 	width: 50%;
 	color: white;
-	z-index:10;
 }
 
 .geppettoForm input,
